# jarust

./: CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.cargo/: audit.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docker/: janus_legacy.dockerfile  janus_multistream.dockerfile
e2e/: Cargo.toml  docker-compose.e2e.yml
e2e/src/: lib.rs
e2e/tests/: audiobridge.rs  core.rs  echotest.rs  legacy_videoroom.rs  streaming.rs  videoroom.rs
jarust/: Cargo.toml
jarust/examples/: raw_echotest.rs  streaming.rs  video_room.rs
jarust/tests/mocks/: mock_interface.rs
jarust_core/: Cargo.toml
jarust_core/src/: jaconfig.rs  jakeepalive.rs  japlugin.rs  jasession.rs  lib.rs
jarust_interface/: Cargo.toml
jarust_interface/src/: error.rs  janus_interface.rs  japrotocol.rs  tgenerator.rs
jarust_interface/src/restful/: restful_interface.rs
jarust_interface/src/websocket/: mod.rs  napmap.rs  websocket_interface.rs
jarust_interface/src/websocket/native/: mod.rs  websocket_client.rs  websocket_interface.rs
jarust_interface/src/websocket/wasm/: mod.rs  websocket_client.rs  websocket_interface.rs
jarust_plugins/: Cargo.toml  README.md
jarust_plugins/src/: common.rs  lib.rs  make_dto.rs
jarust_plugins/src/audio_bridge/: events.rs  jahandle_ext.rs
jarust_plugins/src/echo_test/: jahandle_ext.rs
jarust_plugins/src/legacy_video_room/: events.rs  handle.rs  jahandle_ext.rs  params.rs  responses.rs
jarust_plugins/src/streaming/: events.rs  jahandle_ext.rs
jarust_plugins/src/video_room/: events.rs  handle.rs  jahandle_ext.rs  params.rs  responses.rs
jarust_rt/: Cargo.toml
jarust_rt/src/: lib.rs  tokio_rt.rs  wasm_rt.rs
jarust_wasm_demo/: Cargo.toml  README.md  index.html
jarust_wasm_demo/src/: lib.rs
scripts/: publish_crates.sh  release_tag.sh  update_versions.sh  validate_version.sh
