[workspace]
resolver = "3"
members = [
    "e2e",
    "jarust_core",
    "jarust_interface",
    "jarust_plugins",
    "jarust_rt",
    "jarust",
    "jarust_wasm_demo",
]

[workspace.package]
version = "1.8.2"
authors = ["Hamza Jadid"]
description = "A janus client SDK in Rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["janus", "webrtc", "janus-gateway", "async"]
categories = ["network-programming", "asynchronous", "concurrency"]
edition = "2021"
repository = "https://github.com/Proximie/jarust"

[workspace.dependencies]
# Workspace crates
jarust_core = { version = "1.8.2", path = "jarust_core" }
jarust_interface = { version = "1.8.2", path = "jarust_interface" }
jarust_plugins = { version = "1.8.2", path = "jarust_plugins" }
jarust_rt = { version = "1.8.2", path = "jarust_rt" }

# 3rd Party
async-trait = "0.1.89"
bytes = "1.11.1"
futures-util = "0.3.32"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
tokio = "1.49.0"
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["js"] }

# Dev deps
anyhow = "1.0.102"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
