[package]
name = "jarust_wasm_demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WASM demo for jarust using the echo test plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
jarust_core = { path = "../jarust_core", default-features = false }
jarust_interface = { path = "../jarust_interface", default-features = false }
jarust_plugins = { path = "../jarust_plugins", default-features = false, features = ["echo-test"] }
serde_json.workspace = true
tracing.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
